feat: modify destination -> area, Add price