@@ -1,10 +1,8 @@
 package com.travelers.dto;
 
 import com.travelers.biz.domain.product.Product;
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
+import com.travelers.biz.domain.product.embeddable.Price;
+import lombok.*;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -17,25 +15,25 @@ public class ProductResponseDto {
     private Long id;
     private String title;
     private String target;
-    private String destination;
+    private String area;
     private String theme;
     private List<String> summary;
-    private String packaging;
     private int period;
     private String mainImage;
     private List<String> subImages;
+    private Price price;
 
     public static ProductResponseDto of(Product product) {
         return new ProductResponseDto(product.getId(),
                 product.getTitle(),
                 product.getTarget(),
-                product.getDestination(),
+                product.getArea(),
                 product.getTheme(),
                 List.of(product.getSummary().split(",")),
-                product.getPackaging(),
                 product.getPeriod(),
-                product.getImages().getFirst().getUrl(),
-                getSubImages(product)
+                product.getImages().get(0).getUrl(),
+                getSubImages(product),
+                product.getPrice()
                 );
     }
 
